testcases/malgo/error/ErrorRigidType.mlg
module ErrorRigidType = {
  def apply : (a -> b) -> b -> a;
  def apply = { f x -> f x };
}